--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frngmz_app",
+  "name": "hnqis2_fg",
   "version": "1.0.0",
   "description": "",
   "license": "BSD-3-Clause",
@@ -11,16 +11,18 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
-    "@dhis2/cli-app-scripts": "^7.6.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^0.8.4",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "@dhis2/cli-app-scripts": "^8.0.1",
+    "react-scripts": "^0.8.4"
   },
   "dependencies": {
-    "@dhis2/app-runtime": "^2.11.1",
-    "@dhis2/ui": "^6.23.5"
+    "@dhis2/app-runtime": "^3.2.0",
+    "@dhis2/ui": "^7.2.0",
+    "jquery": "^3.6.0",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-redux": "^7.2.5",
+    "react-router-dom": "^5.3.0",
+    "react-sweet-progress": "^1.1.2",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0"
   }
 }
