--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
-    "@dhis2/cli-app-scripts": "^8.0.1",
+    "@dhis2/cli-app-scripts": "^8.3.2",
     "react-scripts": "^0.8.4"
   },
   "dependencies": {
     "@dhis2/app-runtime": "^3.2.0",
     "@dhis2/ui": "^7.2.0",
+    "exceljs": "^4.2.1",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-sweet-progress": "^1.1.2",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "exceljs": "^4.2.1",
-    "file-saver": "^2.0.5"
+    "redux-thunk": "^2.3.0"
   }
 }
