--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "programconfigapp",
   "short_name":"Program Config App",
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
-  "version": "1.0.0-r.c.1",
+  "version": "1.1.0",
   "description": "",
   "license": "BSD-3-Clause",
   "private": true,
@@ -13,11 +13,10 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
-    "@dhis2/cli-app-scripts": "^8.3.2",
-    "react-scripts": "^0.8.4"
+    "@dhis2/cli-app-scripts": "^8.3.2"
   },
   "dependencies": {
-    "@dhis2/app-runtime": "^3.2.0",
+    "@dhis2/app-runtime": "^3.2.9",
     "@dhis2/ui": "^7.2.0",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
