--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@dhis2/cli-app-scripts": "^8.3.2",
     "react-error-overlay": "6.0.9"
   },
+  "resolutions": {
+    "react-scripts/**/react-error-overlay": "6.0.9"
+  },
   "dependencies": {
     "@dhis2/app-runtime": "^3.2.9",
     "@dhis2/ui": "^7.2.0",
