--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
+    "@mui/x-data-grid": "^5.9.0",
     "@uiw/react-md-editor": "^3.11.2",
     "exceljs": "^4.2.1",
     "file-saver": "^2.0.5",
