--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.79",
     "@mui/material": "^5.5.2",
     "@mui/x-data-grid": "^5.9.0",
     "@uiw/react-md-editor": "^3.11.2",
