--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-color": "2.17.3",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-sweet-progress": "^1.1.2",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "rehype-sanitize": "^5.0.1"
+    "rehype-sanitize": "^5.0.1",
+    "tinycolor2": "^1.4.2"
   }
 }
