--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
   "version": "1.3.0",
   "description": "",
-  "license": "BSD-3-Clause",
+  "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
     "build": "d2-app-scripts build",
