--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "programconfigapp",
+  "title": "Program Config App",
   "short_name": "Program Config App",
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
-  "version": "1.3.0",
-  "description": "",
+  "version": "1.4.0",
+  "description":"Tracker Programs management tool",
   "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
