H1 to H2 Conversion Preparations

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "short_name": "Program Config App",
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
   "version": "1.5.0",
-  "description":"Tracker Programs management tool",
+  "description": "Tracker Programs management tool",
   "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
@@ -35,6 +35,7 @@
     "jquery": "^3.6.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-color": "2.17.3",
+    "react-hook-form": "^7.34.0",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-sweet-progress": "^1.1.2",
