--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "short_name": "Program Config App",
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
   "version": "1.5.0",
-  "description":"Tracker Programs management tool",
+  "description": "Tracker Programs management tool",
   "license": "CC-BY-4.0",
   "private": true,
   "scripts": {
@@ -41,6 +41,7 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "rehype-sanitize": "^5.0.1",
+    "semver": "^7.3.7",
     "tinycolor2": "^1.4.2"
   }
 }
