--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "programconfigapp",
-  "title": "Program Config App",
-  "short_name": "Program Config App",
+  "title": "Program Configuration App",
+  "short_name": "Program Configuration App",
   "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
   "version": "1.6.0",
   "description": "Tracker Programs management tool",
