Changed owner to KnowTechTure

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "programconfigapp",
   "title": "Program Configuration App",
   "short_name": "Program Configuration App",
-  "author": "Fernando Gomez - Mario Lopez - Utsav Koju",
+  "author": "KnowTechTure",
   "version": "1.6.0",
   "description": "Tracker Programs management tool",
   "license": "CC-BY-4.0",
