--- a/package.json
+++ b/package.json
@@ -1,48 +1,47 @@
 {
-  "name": "programconfigapp",
-  "title": "Program Configuration App",
-  "short_name": "Program Configuration App",
-  "author": "KnowTechTure",
-  "version": "1.6.0",
-  "description": "Tracker Programs management tool",
-  "license": "CC-BY-4.0",
-  "private": true,
-  "scripts": {
-    "build": "d2-app-scripts build",
-    "start": "d2-app-scripts start",
-    "test": "d2-app-scripts test",
-    "deploy": "d2-app-scripts deploy"
-  },
-  "devDependencies": {
-    "@dhis2/cli-app-scripts": "^8.3.2",
-    "react-error-overlay": "6.0.9"
-  },
-  "resolutions": {
-    "react-scripts/**/react-error-overlay": "6.0.9"
-  },
-  "dependencies": {
-    "@dhis2/app-runtime": "^3.2.9",
-    "@dhis2/ui": "^7.2.0",
-    "@emotion/react": "^11.8.2",
-    "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.5.1",
-    "@mui/lab": "^5.0.0-alpha.79",
-    "@mui/material": "^5.5.2",
-    "@mui/x-data-grid": "^5.9.0",
-    "@uiw/react-md-editor": "^3.11.2",
-    "exceljs": "^4.2.1",
-    "file-saver": "^2.0.5",
-    "jquery": "^3.6.0",
-    "react-beautiful-dnd": "^13.1.0",
-    "react-color": "2.17.3",
-    "react-hook-form": "^7.34.0",
-    "react-redux": "^7.2.5",
-    "react-router-dom": "^5.3.0",
-    "react-sweet-progress": "^1.1.2",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "rehype-sanitize": "^5.0.1",
-    "semver": "^7.3.7",
-    "tinycolor2": "^1.4.2"
-  }
+    "name": "program_configuration",
+    "title": "Program Configuration",
+    "author": "KnowTechTure SL",
+    "version": "1.6.0",
+    "description": "Tracker Programs management tool",
+    "license": "CC-BY-4.0",
+    "private": true,
+    "scripts": {
+        "build": "d2-app-scripts build",
+        "start": "d2-app-scripts start",
+        "test": "d2-app-scripts test",
+        "deploy": "d2-app-scripts deploy"
+    },
+    "devDependencies": {
+        "@dhis2/cli-app-scripts": "^8.3.2",
+        "react-error-overlay": "6.0.9"
+    },
+    "resolutions": {
+        "react-scripts/**/react-error-overlay": "6.0.9"
+    },
+    "dependencies": {
+        "@dhis2/app-runtime": "^3.2.9",
+        "@dhis2/ui": "^7.2.0",
+        "@emotion/react": "^11.8.2",
+        "@emotion/styled": "^11.8.1",
+        "@mui/icons-material": "^5.5.1",
+        "@mui/lab": "^5.0.0-alpha.79",
+        "@mui/material": "^5.5.2",
+        "@mui/x-data-grid": "^5.9.0",
+        "@uiw/react-md-editor": "^3.11.2",
+        "exceljs": "^4.2.1",
+        "file-saver": "^2.0.5",
+        "jquery": "^3.6.0",
+        "react-beautiful-dnd": "^13.1.0",
+        "react-color": "2.17.3",
+        "react-hook-form": "^7.34.0",
+        "react-redux": "^7.2.5",
+        "react-router-dom": "^5.3.0",
+        "react-sweet-progress": "^1.1.2",
+        "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
+        "rehype-sanitize": "^5.0.1",
+        "semver": "^7.3.7",
+        "tinycolor2": "^1.4.2"
+    }
 }
