--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
         "build": "d2-app-scripts build",
         "start": "d2-app-scripts start",
         "test": "d2-app-scripts test",
-        "deploy": "d2-app-scripts deploy"
+        "deploy": "d2-app-scripts deploy",
+        "lint": "yarn d2-style check",
+        "lint:staged": "yarn lint --staged",
+        "format": "yarn d2-style apply",
+        "format:staged": "yarn format --staged"
     },
     "devDependencies": {
         "@dhis2/cli-app-scripts": "^8.3.2",
+        "@dhis2/cli-style": "^10.5.1",
         "react-error-overlay": "6.0.9"
     },
     "resolutions": {
@@ -32,6 +37,7 @@
         "exceljs": "^4.3.0",
         "file-saver": "^2.0.5",
         "jquery": "^3.6.0",
+        "prop-types": "^15.8.1",
         "react-beautiful-dnd": "^13.1.0",
         "react-color": "2.17.3",
         "react-hook-form": "^7.34.0",
