--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "program_configuration",
-    "title": "Program Configuration",
+    "name": "program_configuration_tran_dev",
+    "title": "Program Configuration TRAN DEV",
     "author": "KnowTechTure SL",
     "version": "2.1.1",
     "description": "Tracker Programs management tool",
