--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "format:staged": "yarn format --staged"
     },
     "devDependencies": {
+        "@craco/craco": "^7.1.0",
         "@dhis2/cli-app-scripts": "^8.3.2",
         "@dhis2/cli-style": "^10.5.1",
+        "process": "^0.11.10",
         "react-error-overlay": "6.0.9"
     },
     "resolutions": {
